refactor: 브라우저 자동화 제거, dbpia_open 도구 추가
- dbpia_login, dbpia_download 등 Playwright 기반 기능 제거
- dbpia_open 추가: 논문 페이지를 시스템 브라우저로 열기
- playwright 의존성 제거로 패키지 경량화
- 세션 관리 복잡성 해소

v0.1.8

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dbpia-mcp",
-  "version": "0.1.7",
-  "description": "DBpia MCP server with PDF download, citation generation, and fulltext search",
+  "version": "0.1.8",
+  "description": "DBpia MCP server for Korean academic paper search, citation generation, and fulltext indexing",
   "main": "dist/index.js",
   "bin": {
     "dbpia-mcp": "dist/index.js"
@@ -41,7 +41,6 @@
     "better-sqlite3": "^12.6.2",
     "fast-xml-parser": "^5.3.4",
     "iconv-lite": "^0.7.2",
-    "playwright": "^1.58.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
