--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "better-sqlite3": "^12.6.2",
     "fast-xml-parser": "^5.3.4",
     "iconv-lite": "^0.7.2",
+    "playwright": "^1.58.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
